Refactor associatedTopology to a dictionary instead of a list
